--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,9 @@
 [submodule "jsoncpp-cmake"]
 	path = jsoncpp-cmake
 	url = https://github.com/jwonders/jsoncpp-cmake
+[submodule "imgui/imgui"]
+	path = imgui/imgui
+	url = https://github.com/ocornut/imgui
+[submodule "imgui/imgui-sfml"]
+	path = imgui/imgui-sfml
+	url = https://github.com/eliasdaler/imgui-sfml
