--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ if(NOT EXISTS "${PROJECT_SOURCE_DIR}/SFML/CMakeLists.txt")
 endif()
 
 #add_subdirectory(SFML)
+add_subdirectory(imgui)
 
 link_directories(/usr/lib/)
 link_directories($ENV{HOME}/.brew/lib/)
@@ -133,17 +134,17 @@ add_executable(${NAME}
         class/Univers.hpp
         externlib/commun/IDisplay.hpp
         externlib/commun/ISound.hpp
-        imgui-sfml/imconfig.h
-        imgui-sfml/imgui-SFML.cpp
-        imgui-sfml/imgui-SFML.h
-        imgui-sfml/imgui.cpp
-        imgui-sfml/imgui.h
-        imgui-sfml/imgui_draw.cpp
-        imgui-sfml/imgui_internal.h
-        imgui-sfml/imgui_widgets.cpp
-        imgui-sfml/imstb_rectpack.h
-        imgui-sfml/imstb_textedit.h
-        imgui-sfml/imstb_truetype.h
+        imgui/imgui-sfml/imgui-SFML.h
+        imgui/imgui-sfml/imgui-SFML.cpp
+        imgui/imgui.h
+        imgui/imgui/imgui.cpp
+        imgui/imgui/imconfig.h
+        imgui/imgui/imgui_draw.cpp
+        imgui/imgui/imgui_internal.h
+        imgui/imgui/imgui_widgets.cpp
+        imgui/imgui/imstb_rectpack.h
+        imgui/imgui/imstb_textedit.h
+        imgui/imgui/imstb_truetype.h
         incs/IWidget.hpp
         incs/logger.h
         incs/logger_utils.h
