--- a/imgui/CMakeLists.txt
+++ b/imgui/CMakeLists.txt
@@ -1,5 +1,5 @@
 file(READ imgui-sfml/imconfig-SFML.h IMGUI-SFML_CONFIG)
 
-FILE(WRITE ${CMAKE_BINARY_DIR}/imgui.h
+FILE(WRITE ${PROJECT_SOURCE_DIR}/imgui.h
         "#pragma once"
         "${IMGUI-SFML_CONFIG}")
