--- a/externlib/sound_sfml/CMakeLists.txt
+++ b/externlib/sound_sfml/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.12)
 set(CMAKE_C_COMPILER "/usr/bin/gcc")
 set(CMAKE_CXX_COMPILER "/usr/bin/g++")
 
-set(NAME sound_sdl)
+set(NAME sound_sfml)
 project(${NAME})
 
 set(CMAKE_BUILD_TYPE Release)
@@ -11,13 +11,13 @@ set(CMAKE_BUILD_TYPE Release)
 set(CMAKE_CXX_STANDARD 14)
 
 
-#list(APPEND CMAKE_MODULE_PATH "$ENV{HOME}/.brew/share/SFML/cmake/Modules/")
+list(APPEND CMAKE_MODULE_PATH "$ENV{HOME}/.brew/share/SFML/cmake/Modules/")
 
-#find_package(SFML QUIET COMPONENTS system window graphics network audio)
-#if (NOT SFML_FOUND)
-#    include_directories(${PROJECT_BINARY_DIR}/../../sfml/src/sfml/include)
-#    link_directories(${PROJECT_BINARY_DIR}/../../sfml/src/sfml-build/lib)
-#endif()
+find_package(SFML QUIET COMPONENTS system window graphics audio)
+if (NOT SFML_FOUND)
+    include_directories(${PROJECT_BINARY_DIR}/../../sfml/src/sfml/include)
+    link_directories(${PROJECT_BINARY_DIR}/../../sfml/src/sfml-build/lib)
+endif()
 
 link_directories(/usr/lib/)
 link_directories($ENV{HOME}/.brew/lib/)
@@ -25,12 +25,12 @@ link_directories($ENV{HOME}/.brew/lib/)
 add_library(
         ${NAME} MODULE
 
-        src/SoundSdl.cpp
-        include/SoundSdl.hpp
+        src/SoundSfml.cpp
+        include/SoundSfml.hpp
 )
 
 target_link_libraries(${NAME} PRIVATE
-        SDL2 SDL2_mixer
+        sfml-graphics sfml-window sfml-system sfml-audio
         )
 
 target_include_directories(
